docs: documenta decisiones, evidencias e instrucciones de ejecucion